# ColorCalibration

./: CMakeLists.txt  README.md  StripTest.cpp  TransformationFinder.cpp  TransformationFinder.h  findMinimum.cpp  main.cpp
